Changed the button styles.

--- a/app/src/main/res/layout/activity_bin_game.xml
+++ b/app/src/main/res/layout/activity_bin_game.xml
@@ -139,6 +139,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="Back!"
         android:visibility="invisible"
