--- a/app/src/main/res/layout/activity_level_selection_world_one.xml
+++ b/app/src/main/res/layout/activity_level_selection_world_one.xml
@@ -15,6 +15,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="Return to main menu"
         app:layout_constraintBottom_toBottomOf="parent"
