--- a/app/src/main/res/layout/activity_multi_player_game.xml
+++ b/app/src/main/res/layout/activity_multi_player_game.xml
@@ -243,6 +243,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="RETURN TO MAIN MENU"
         app:layout_constraintBottom_toBottomOf="parent"
