--- a/app/src/main/res/layout/activity_multiple_choice_game.xml
+++ b/app/src/main/res/layout/activity_multiple_choice_game.xml
@@ -148,6 +148,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="Back!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/MCQ_next_feedback"
