--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -18,6 +18,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:enabled="false"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="@string/multiplayer_game"
         app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
@@ -32,6 +36,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="@string/play_button"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,6 +54,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="@string/dialogue_button"
         app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
@@ -59,6 +71,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="@string/onboarding_button"
         app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
@@ -72,6 +88,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="@string/reset_button"
         app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
