--- a/app/src/main/res/layout/activity_trivia_answer.xml
+++ b/app/src/main/res/layout/activity_trivia_answer.xml
@@ -39,106 +39,107 @@
 
     <TextView
         android:id="@+id/question_info"
-        android:layout_width="362dp"
-        android:layout_height="75dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="TextView"
+        app:layout_constraintEnd_toStartOf="@+id/trivia_answer_guideline2"
+        app:layout_constraintStart_toStartOf="@+id/trivia_answer_guideline1"
+        app:layout_constraintTop_toBottomOf="@+id/score_info" />
+
+    <TextView
+        android:id="@+id/answer_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/bubblegum_sans"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/answer_info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/frameLayout" />
-
-    <TextView
-        android:id="@+id/answer_info"
-        android:layout_width="355dp"
-        android:layout_height="240dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="276dp"
-        android:fontFamily="@font/bubblegum_sans"
-        android:text="TextView"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.575"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/prev_answer_button"
+        app:layout_constraintEnd_toStartOf="@+id/trivia_answer_guideline2"
+        app:layout_constraintStart_toStartOf="@+id/trivia_answer_guideline1"
+        app:layout_constraintTop_toBottomOf="@+id/question_info" />
 
     <Button
         android:id="@+id/next_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_rounded_corners"
-        android:drawablePadding="5dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Next Question"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
         android:fontFamily="@font/bubblegum_sans"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="Next Question"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.717"
-        app:layout_constraintStart_toEndOf="@+id/prev_answer_button"
-        app:layout_constraintTop_toBottomOf="@+id/answer_info"
-        app:layout_constraintVertical_bias="0.501" />
+        app:layout_constraintEnd_toStartOf="@+id/trivia_answer_guideline2"
+        app:layout_constraintStart_toEndOf="@+id/prev_answer_button" />
 
     <Button
         android:id="@+id/prev_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/button_rounded_corners"
         android:drawablePadding="5dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:text="Previous Question"
-        android:fontFamily="@font/bubblegum_sans"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/answer_info"
-        app:layout_constraintVertical_bias="0.501" />
+        app:layout_constraintStart_toStartOf="@+id/trivia_answer_guideline1" />
 
     <Button
         android:id="@+id/main_menu_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/button_rounded_corners"
         android:drawablePadding="5dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="100dp"
         android:text="Return to level selection"
-        android:fontFamily="@font/bubblegum_sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/answer_info" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/score_info"
-        android:layout_width="353dp"
-        android:layout_height="51dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="TextView"
         android:fontFamily="@font/bubblegum_sans"
-        app:layout_constraintBottom_toTopOf="@+id/question_info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="TextView"
+        app:layout_constraintEnd_toStartOf="@+id/trivia_answer_guideline2"
+        app:layout_constraintStart_toStartOf="@+id/trivia_answer_guideline1"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/trivia_answer_guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.02" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/trivia_answer_guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.98" />
 </android.support.constraint.ConstraintLayout>
